syntax = "proto3";
package ffs.rpc;

option go_package = "github.com/textileio/powergate/ffs/rpc";

// model messages
// ------------------------------------

message AddrInfo {
   string name = 1;
   string addr = 2;
   string type = 3;
   uint64 balance = 4;
}

message IpfsConfig {
   int64 add_timeout = 1;
}

message HotConfig {
   bool enabled = 1;
   bool allow_unfreeze = 2;
   uint64  unfreeze_max_price = 3;
   IpfsConfig ipfs = 4;
}

message FilRenew {
   bool enabled = 1;
   int64 threshold = 2;
}

message FilConfig {
   int64 rep_factor = 1;
   int64 deal_min_duration = 2;
   repeated string excluded_miners = 3;
   repeated string trusted_miners = 4;
   repeated string country_codes = 5;
   FilRenew renew = 6;
   string addr = 7;
   uint64 max_price = 8;
   bool fast_retrieval = 9;
   int64 deal_start_offset = 10;
}

message ColdConfig {
   bool enabled = 1;
   FilConfig filecoin = 2;
}

message StorageConfig {
   HotConfig hot = 1;
   ColdConfig cold = 2;
   bool repairable = 3;
}

message IpfsHotInfo {
   int64 created = 1;
}

message HotInfo {
   bool enabled = 1;
   int64 size = 2;
   IpfsHotInfo ipfs = 3;
}

message FilStorage {
   string proposal_cid = 1;
   bool renewed = 2;
   int64 duration = 3;
   int64 activation_epoch = 4;
   uint64 start_epoch = 5;
   string miner = 6;
   uint64 epoch_price = 7;
   string piece_cid = 8;
}

message FilInfo {
   string data_cid = 1;
   uint64 size = 2;
   repeated FilStorage proposals = 3;
}

message ColdInfo {
   bool enabled = 1;
   FilInfo filecoin = 2;
}

message StorageInfo {
   string job_id = 1;
   string cid = 2;
   int64 created = 3;
   HotInfo hot = 4; 
   ColdInfo cold = 5;
}

message CidData {
   string cid = 1;
   StorageConfig latest_pushed_storage_config = 2;
   StorageInfo current_storage_info = 3;
   repeated Job queued_storage_jobs = 4;
   Job executing_storage_job = 5;
   Job latest_final_storage_job = 6;
   Job latest_successful_storage_job = 7;
}

enum JobStatus {
   JOB_STATUS_UNSPECIFIED = 0;
   JOB_STATUS_QUEUED = 1;
   JOB_STATUS_EXECUTING = 2;
   JOB_STATUS_FAILED = 3;
   JOB_STATUS_CANCELED = 4;
   JOB_STATUS_SUCCESS = 5;
}

message DealInfo {
   string proposal_cid = 1;
   uint64 state_id = 2;
   string state_name = 3;
   string miner = 4;
   string piece_cid = 5;
   uint64 size = 6;
   uint64 price_per_epoch  = 7;
   uint64 start_epoch = 8;
   uint64 duration = 9;
   uint64 deal_id = 10;
   int64 activation_epoch = 11;
   string message = 12;
}

message Job {
   string id = 1; 
   string api_id = 2;
   string cid = 3;
   JobStatus status = 4;
   string err_cause = 5;
   repeated DealInfo deal_info = 6;
   repeated DealError deal_errors = 7;
   int64 created_at = 8;
}

message DealError {
   string proposal_cid = 1;
   string miner = 2;
   string message = 3;
}

message LogEntry {
   string cid = 1;
   string jid = 2;
   int64 time = 3;
   string msg = 4;
}

enum Direction {
   DIRECTION_UNSPECIFIED = 0;
   DIRECTION_INBOUND = 1;
   DIRECTION_OUTBOUND = 2;
 }
 
 message PaychInfo {
   string ctl_addr = 1;
   string addr = 2;
   Direction direction = 3;
 }

 message ListDealRecordsConfig {
   repeated string from_addrs = 1;
   repeated string data_cids = 2;
   bool include_pending = 3;
   bool include_final = 4;
   bool ascending = 5;
}

message StorageDealInfo {
   string proposal_cid = 1;
   uint64 state_id = 2;
   string state_name = 3;
   string miner = 4;

   string piece_cid = 5;
   uint64 size = 6;

   uint64 price_per_epoch = 7;
   uint64 start_epoch = 8;
   uint64 duration = 9;

   uint64 deal_id = 10;
   int64 activation_epoch = 11;
   string msg = 12;
}

message StorageDealRecord {
   string root_cid = 1;
   string addr = 2;
   int64 time = 3;
   bool pending = 4;
   StorageDealInfo deal_info = 5;
}

message RetrievalDealInfo {
	string root_cid = 1;
	uint64 size = 2;
	uint64 min_price = 3;
	uint64 payment_interval = 4;
	uint64 payment_interval_increase = 5;
	string miner = 6;
	string miner_peer_id = 7;
}

message RetrievalDealRecord {
    string addr = 1;
    int64 time = 2;
    RetrievalDealInfo deal_info = 3;
}

// request/reply messages
// -------------------------------------

message IDRequest {
}

message IDResponse {
   string id = 1;
}

message AddrsRequest {
}

message AddrsResponse {
   repeated AddrInfo addrs = 1;
}

message DefaultStorageConfigRequest {
}

message DefaultStorageConfigResponse {
   StorageConfig default_storage_config = 1;
}

message SignMessageRequest {
   string addr = 1;
   bytes msg =2;
}

message SignMessageResponse {
   bytes signature = 1;
}

message VerifyMessageRequest {
   string addr = 1;
   bytes msg = 2;
   bytes signature = 3;
}

message VerifyMessageResponse {
   bool ok = 1;
}

message NewAddrRequest {
   string name = 1;
   string address_type = 2;
   bool make_default = 3;
}

message NewAddrResponse {
   string addr = 1;
}

message SetDefaultStorageConfigRequest {
   StorageConfig config = 1;
}

message SetDefaultStorageConfigResponse {
}

message CidDataRequest {
   repeated string cids = 1;
}

message CidDataResponse {
   repeated CidData cid_datas = 1;
}

message CancelJobRequest {
   string jid = 1;
}

message CancelJobResponse {
}

message StorageJobRequest {
   string jid = 1;
}

message StorageJobResponse {
   Job job = 1;
}

message QueuedStorageJobsRequest {
   repeated string cids = 1;
}

message QueuedStorageJobsResponse {
   repeated ffs.rpc.Job storage_jobs = 1;
}

message ExecutingStorageJobsRequest {
   repeated string cids = 1;
}

message ExecutingStorageJobsResponse {
   repeated ffs.rpc.Job storage_jobs = 1;
}

message LatestFinalStorageJobsRequest {
   repeated string cids = 1;
}

message LatestFinalStorageJobsResponse {
   repeated ffs.rpc.Job storage_jobs = 1;
}

message LatestSuccessfulStorageJobsRequest {
   repeated string cids = 1;
}

message LatestSuccessfulStorageJobsResponse {
   repeated ffs.rpc.Job storage_jobs = 1;
}

message StorageJobsSummaryRequest {
   repeated string cids = 1;
}

message JobCounts {
   int32 queued = 1;
   int32 executing = 2;
   int32 latest_final = 3;
   int32 latest_successful = 4;
}
 
message StorageJobsSummaryResponse {
   JobCounts job_counts = 1;
   repeated ffs.rpc.Job queued_storage_jobs = 2;
   repeated ffs.rpc.Job executing_storage_jobs = 3;
   repeated ffs.rpc.Job latest_final_storage_jobs = 4;
   repeated ffs.rpc.Job latest_successful_storage_jobs = 5;
}

message WatchJobsRequest {
   repeated string jids = 1;
}

message WatchJobsResponse {
   Job job = 1;
}

message WatchLogsRequest {
   string cid = 1;
   string jid = 2;
   bool history = 3;
}

message WatchLogsResponse {
   LogEntry log_entry = 1;
}

message ReplaceRequest {
   string cid1 = 1;
   string cid2 = 2;
}

message ReplaceResponse {
   string job_id = 1;
}

message PushStorageConfigRequest {
   string cid = 1;
   StorageConfig config = 2;
   bool has_config = 3;
   bool override_config = 4;
   bool has_override_config = 5;
}

message PushStorageConfigResponse {
   string job_id = 1;
}

message RemoveRequest {
   string cid = 1;
}

message RemoveResponse {
}

message GetRequest {
   string cid = 1;
}

message GetResponse {
   bytes chunk = 1;
}

message SendFilRequest {		
   string from = 1;		
   string to = 2;		
   int64 amount = 3;		
}		

message SendFilResponse {		
}

message StageRequest {
   bytes chunk = 1;
}

message StageResponse {
   string cid = 1;
}

message ListPayChannelsRequest {
}
 
 message ListPayChannelsResponse {
   repeated PaychInfo pay_channels = 1;
 }
 
 message CreatePayChannelRequest {
   string from = 1;
   string to = 2;
   uint64 amount = 3;
 }
 
 message CreatePayChannelResponse {
   PaychInfo pay_channel = 1;
   string channel_message_cid = 2;
 }
 
 message RedeemPayChannelRequest {
   string pay_channel_addr = 1;
 }
 
 message RedeemPayChannelResponse {
 }

 message ListStorageDealRecordsRequest {
   ListDealRecordsConfig config = 1;
}

message ListStorageDealRecordsResponse {
   repeated StorageDealRecord records = 1;
}

message ListRetrievalDealRecordsRequest {
   ListDealRecordsConfig config = 1;
}

message ListRetrievalDealRecordsResponse {
   repeated RetrievalDealRecord records = 1;
}

service RPCService {
   rpc ID(IDRequest) returns (IDResponse) {}
   rpc Addrs(AddrsRequest) returns (AddrsResponse) {}
   rpc DefaultStorageConfig(DefaultStorageConfigRequest) returns (DefaultStorageConfigResponse) {}
   rpc NewAddr(NewAddrRequest) returns (NewAddrResponse) {}
   rpc SignMessage(SignMessageRequest) returns (SignMessageResponse) {}
   rpc VerifyMessage(VerifyMessageRequest) returns (VerifyMessageResponse) {}
   rpc SetDefaultStorageConfig(SetDefaultStorageConfigRequest) returns (SetDefaultStorageConfigResponse) {}
   rpc CidData(CidDataRequest) returns (CidDataResponse) {}
   rpc CancelJob(CancelJobRequest) returns (CancelJobResponse) {}
   rpc StorageJob(StorageJobRequest) returns (StorageJobResponse) {}
   rpc QueuedStorageJobs(QueuedStorageJobsRequest) returns (QueuedStorageJobsResponse) {}
   rpc ExecutingStorageJobs(ExecutingStorageJobsRequest) returns (ExecutingStorageJobsResponse) {}
   rpc LatestFinalStorageJobs(LatestFinalStorageJobsRequest) returns (LatestFinalStorageJobsResponse) {}
   rpc LatestSuccessfulStorageJobs(LatestSuccessfulStorageJobsRequest) returns (LatestSuccessfulStorageJobsResponse) {}
   rpc StorageJobsSummary(StorageJobsSummaryRequest) returns (StorageJobsSummaryResponse) {}
   rpc WatchJobs(WatchJobsRequest) returns (stream WatchJobsResponse) {}
   rpc WatchLogs(WatchLogsRequest) returns (stream WatchLogsResponse){}
   rpc Replace(ReplaceRequest) returns (ReplaceResponse) {}
   rpc PushStorageConfig(PushStorageConfigRequest) returns (PushStorageConfigResponse) {}
   rpc Remove(RemoveRequest) returns (RemoveResponse) {}
   rpc Get(GetRequest) returns (stream GetResponse) {}
   rpc SendFil(SendFilRequest) returns (SendFilResponse) {}
   rpc Stage(stream StageRequest) returns (StageResponse) {}
   rpc ListPayChannels(ListPayChannelsRequest) returns (ListPayChannelsResponse) {}
   rpc CreatePayChannel(CreatePayChannelRequest) returns (CreatePayChannelResponse) {}
   rpc RedeemPayChannel(RedeemPayChannelRequest) returns (RedeemPayChannelResponse) {}
   rpc ListStorageDealRecords(ListStorageDealRecordsRequest) returns (ListStorageDealRecordsResponse) {}
   rpc ListRetrievalDealRecords(ListRetrievalDealRecordsRequest) returns (ListRetrievalDealRecordsResponse) {}
}
